Revert "Revert "fix Testimonial left Button Not Visibible""
This reverts commit 3b4c7bd7ee1ac52d48b46f19efae9470db59eef1.

--- a/styles/testimonial.module.css
+++ b/styles/testimonial.module.css
@@ -27,3 +27,10 @@
     margin-bottom: 30px;
   }
 }
+
+@media (max-width: 400px) {
+  .custom-padding {
+    padding: 20px;
+  }
+}
+
